--- a/app/css/main.css
+++ b/app/css/main.css
@@ -7,20 +7,26 @@ html, body, div, span, h1, h2, h3, h4, h5, h6, p, em, img, strong, sub, sup, b, 
     vertical-align: baseline; /* приводим все к одной базовой линии */
     background: transparent; /* чтобы не проскакивали левые фоны, установленные по умолчанию */
     font-size: 100%; /* размер шрифта всем одинаковый */
+}
 
+@font-face {
+    font-family: 'Arial Regular';
+    src: url('../fonts/ArialRegular/ArialRegular.ttf'),
+    url('../fonts/ArialRegular/arialregular-webfont.woff') format('woff2'),
+    url('../fonts/ArialRegular/arialregular-webfont.woff2') format('woff'),
+font-weight: normal;
+    font-style: normal;
 }
 
 @font-face {
     font-family: 'Lucida Sans Unicode';
-    src: url('../fonts/helveticaneue-thin-webfont.eot');
-    src: url('../fonts/helveticaneue-thin-webfont.eot?#iefix') format('embedded-opentype'),
-    url('../fonts/helveticaneue-thin-webfont.woff2') format('woff2'),
-    url('../fonts/helveticaneue-thin-webfont.woff') format('woff'),
-    url('../fonts/helveticaneue-thin-webfont.ttf') format('truetype');
+    src: url('../fonts/lucida-sans-unicode/lucida-sans-unicode_[allfont.ru].ttf'),
+    url('../fonts/lucida-sans-unicode/lucida-sans-unicode_allfont.ru-webfont.woff2') format('woff2'),
+    url('../fonts/lucida-sans-unicode/lucida-sans-unicode_allfont.ru-webfont.woff') format('woff'),
     font-weight: normal;
     font-style: normal;
-
 }
+
 
 
 .container  {
@@ -28,15 +34,14 @@ html, body, div, span, h1, h2, h3, h4, h5, h6, p, em, img, strong, sub, sup, b, 
     width: 1000px;
     height: 1310px;
     background-color: #dde2e4;
-
+    box-shadow: 0 0 10px rgba(0,0,0,0.8);
 }
 
-.header {
+header {
+    position: relative;
     padding: 13px 45px 0 45px;
-    background-color: #E4CBCB;
-
+    background-color: #fff;
 }
-
 
 .telephone {
     position: relative;
@@ -44,28 +49,27 @@ html, body, div, span, h1, h2, h3, h4, h5, h6, p, em, img, strong, sub, sup, b, 
     width: 297px;
     height: 22px;
     background-color: #ffffff;
-  
-   
 }
 
 .telephone a {
     position: absolute;
     padding-left: 7px;
-    top: 1px;
-}
-
-.telephone span {
-    display: block;
+    top: 6px;
+    width: 100%;
+    z-index: 1;
 }
 
 .telephone span {
     color: #5e696d;
+    position: relative;
+    top: 4px;
     font-family: Arial, sans-serif;
     padding-left: 32px;
-    font-size: 18px;
+    font-size: 1.125rem;
     font-weight: 400;
     line-height: 25px;
     vertical-align: middle;
+    letter-spacing: 0.025rem;
 }
 
 .Shape {
@@ -80,27 +84,28 @@ html, body, div, span, h1, h2, h3, h4, h5, h6, p, em, img, strong, sub, sup, b, 
     box-shadow: 1.5px 2.6px 3px rgba(150, 150, 150, 0.75);
 }
 .Shape input {
-
     display: inline-block;
-    width: 112px;
-    height: 17px;
+    width: 111px;
+    height: 13px;
+    padding-left: 2px;
     color: #97a2a6;
-    font-family: "Lucida Sans Unicode";
-    font-size: 11px;
+    font-family: "Lucida Sans Unicode", sans-serif;
+    font-size: 0.6875rem;
     font-weight: 400;
     line-height: 25px;
+    border: 1px solid rgb(155, 161, 163);
+    border-radius: 2px;
+    margin-right: 3px;
 }
 .men {
-    position: absolute;
-    display: inline;
-    padding: 7px 4px 4px 4px ;
-
+    float: left;
+    display: inline-block;
+    padding: 4px 4px 2px 6px;
 }
 
 .ul_head  {
     display: inline-block;
     list-style: none;
-    margin-left: 15px;
 }
 
 .ul_head li  {
@@ -108,10 +113,188 @@ html, body, div, span, h1, h2, h3, h4, h5, h6, p, em, img, strong, sub, sup, b, 
     list-style: none;
 }
 
-.ul_head li a  {
-   color: #fff;
-    font-family: "Lucida Sans Unicode";
-    font-size: 11px;
+.ul_head a  {
+    color: #fff;
+    font-family: "Lucida Sans Unicode", sans-serif;
+    font-size: 0.6875rem;
     font-weight: 400;
+    letter-spacing: 0.025rem;
     line-height: 25px;
+    text-decoration: none;
 }
+
+.ul_head a:hover {
+    color: #bfbfbf;
+}
+
+.left_li {
+    background: url("../img/line.png") no-repeat right 9px;
+    padding-right: 2px ;
+}
+
+.right_li a {
+    color: #bfbfbf;
+    font-family: "Lucida Sans Unicode", sans-serif;
+    font-size: 0.75rem;
+    font-weight: 400;
+    text-decoration: underline;
+    padding-left: 6px;
+}
+.right_li a:hover {
+    text-decoration: none;
+}
+
+.navi {
+    position: absolute;
+    display: inline-block;
+    background-image: url("../img/Shape.png");
+    width: 73px;
+    height: 27px;
+    padding-top: 6px;
+    padding-left: 9px;
+    margin-left: 3px;
+}
+
+.navi a {
+    padding-left: 4px;
+}
+
+.main_image {
+    width: 100%;
+    margin-top: 10px;
+    margin-bottom: 2px;
+}
+
+.main_menu {
+    width: 910px;
+    height: 34px;
+    background-image: linear-gradient(to top, #000 0%, #576068 100%);
+    border: 1px solid #0d1642;
+    border-radius: 5px;
+    box-shadow: 1.5px 2.6px 5px rgba(0, 0, 0, 0.75);
+}
+
+.menu li {
+    float: left;
+    margin-top: 2px ;
+    list-style: none;
+}
+
+.menu > li:first-child {
+    padding-left: 126px;
+}
+
+.menu li a {
+    text-align: center;
+    display: block;
+    line-height: 25px;
+    padding: 3px 16px 0 16px;
+    font-family: "Lucida Sans Unicode", sans-serif;
+    text-transform: uppercase;
+    font-size: 0.8125rem;
+    letter-spacing: 0.008rem;
+
+    color: #b1bcc0;
+    text-decoration: none;
+}
+
+
+.menu .first_a:hover {
+    background: url("../img/point.png")no-repeat;
+    color: #fff;
+}
+
+.menu li a:hover {
+    background: url("../img/point2.png") no-repeat;
+    background-position: center;
+    color: #fff;
+}
+
+.menu .litle:hover {
+    background: url("../img/point3.png") no-repeat;
+    background-position: center;
+    color: #fff;
+}
+
+.basket {
+    position: relative;
+    float: right;
+    width: 228px;
+
+
+}
+
+.basket li  {
+    text-align: center;
+    display: block;
+    float: right;
+    margin-top: 2px ;
+    list-style: none;
+    line-height: 25px;
+    padding: 2px 10px 0 1px;
+    font-family: arial bold, sans-serif;
+    font-size: 0.6875rem;
+    letter-spacing: 0.02rem;
+    color: 	#929b9f;
+    text-decoration: none;
+}
+
+
+.basket_img {
+    position: absolute;
+    display: block;
+    margin-top: 7px;
+
+}
+
+.basket span {
+    color: #0d5a8f;
+    font-size: 0.75rem;
+    letter-spacing: 0.008rem;
+    padding: 0 5px;
+
+}
+
+.search {
+    position: relative;
+    padding: 8px 48px 0 48px;
+    background-color: #fff;
+    overflow: hidden;
+    zoom: 1;
+}
+
+.search img {
+    display: inline-block;
+    float: left;
+}
+
+.findTires {
+    margin-left: 8px;
+}
+.findDisc {
+    margin-left: 4px;
+    position: absolute;
+    float: right;
+}
+
+.katalog {
+    width: 236px;
+    height: 422px;
+    background-color: #aebcc3;
+
+}
+
+.products {
+    display: inline-block;
+    border: none;
+    background-image: url("../img/katalogframe.png");
+    color: #fff;
+    font-size: 0.875em;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    padding: 13px 34px;
+
+    transition: all .15s ease;
+    text-align: center;
+}
+
